# Applied-Software-Projects

./: README.md
exercise02/: hello.cpp  readme.md
exercise03/: hello.cpp  readme.md
exercise04/: MyVector.h  MyVector.tpp  test_myvector.cpp
exercise05/: wordcount  wordcount.cpp
exercise07/: Vagrantfile  unit_test.cpp
exercise08/: CMakeLists.txt  README.md  clientcode.cpp  treap.cpp  treap.h  unit_test.cpp
exercise08/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
exercise09/: CMakeLists.txt  README.md  hello_label.cpp  hello_static.cpp  label_printer.cpp  label_printer.h
exercise09/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
exercise11/: CMakeLists.txt  README.md  complex_widget.cpp  complex_widget.hpp  main.cpp
exercise11/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
exercise12/: CMakeLists.txt  README.md  main.cpp  widget_events.cpp  widget_events.hpp
exercise13/: CMakeLists.txt  README.md  main.cpp  traffic_light.cpp  traffic_light.h
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  Vagrantfile  las_semester.txt  todo  todo.cpp  todo.txt
project2/: CMakeLists.txt  Procedure.cpp  Procedure.hpp  Vagrantfile  environment.cpp  environment.hpp  expression.cpp  expression.hpp  interpreter.cpp  interpreter.hpp  slisp.cpp  test_interpreter.cpp  test_tokenize.cpp  test_types.cpp  tokenize.cpp  (+2 more)
(+43 files in other folders)
